Xóa bảng tác giả, Fix lỗi tìm kiếm sách
- Chỉ lấy sách có thuộc tính Disable = true

--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSSach.xaml
@@ -249,7 +249,7 @@
                         Header="Ngành sách" />
                     <DataGridTextColumn
                         Width="100"
-                        Binding="{Binding TacGia1.Ten}"
+                        Binding="{Binding TacGia}"
                         Header="Tác giả" />
                     <DataGridTextColumn
                         Width="200"
