--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSSach.xaml
@@ -6,7 +6,6 @@
     xmlns:local="clr-namespace:DACK_PTTKPM"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Sach"
-    d:DesignHeight="600"
     d:DesignWidth="1200"
     mc:Ignorable="d">
 
@@ -77,8 +76,8 @@
                 Grid.Row="1"
                 BorderBrush="#B9C9DA"
                 BorderThickness="0,1,2,0">
-                <ScrollViewer>
-                    <StackPanel Margin="20,0,20,10" Orientation="Vertical">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <StackPanel Margin="20,0,20,20" Orientation="Vertical">
                         <Label
                             HorizontalAlignment="Center"
                             Content="Thông tin sách"
@@ -86,79 +85,88 @@
                             FontWeight="Bold"
                             Foreground="Red" />
                         <Image
+                            x:Name="img_AnhSachChon"
                             Width="100"
                             Height="100"
                             Source="../images/Sach.png" />
                         <StackPanel Height="25" Orientation="Horizontal">
                             <Label
-                                Width="100"
+                                Width="60"
                                 Content="Mã sách:"
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_MaSach"
-                                Content=""
+                                x:Name="lb_MaSachChon"
+                                Content="aa"
                                 FontWeight="Bold" />
                         </StackPanel>
-                        <Label
-                            Width="100"
-                            Margin="0,5,0,0"
-                            HorizontalAlignment="Left"
-                            Content="Tên sách:"
-                            FontWeight="Bold"
-                            Foreground="Red" />
-                        <Label
-                            x:Name="lb_KQTK_TenSach"
-                            Content=""
-                            FontWeight="Bold" />
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label
+                                Width="60"
+                                HorizontalAlignment="Left"
+                                Content="Tên sách:"
+                                FontWeight="Bold"
+                                Foreground="Red" />
+                            <Label
+                                x:Name="lb_TenSachChon"
+                                Content="â"
+                                FontWeight="Bold" />
+                        </StackPanel>
+
                         <StackPanel
                             Height="25"
                             Margin="0,5,0,0"
                             Orientation="Horizontal">
                             <Label
-                                Width="130"
-                                Content="Số lượng hiện có:"
+                                Width="100"
+                                Content="Số lượng tồn:"
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_SoLuongHienCo"
+                                x:Name="lb_SoLuongTonSachChon"
                                 Width="30"
                                 Content=""
                                 FontWeight="Bold" />
                             <Label
-                                Width="130"
+                                Width="100"
                                 Margin="37,0,0,0"
-                                Content="Số lượng hiện có:"
+                                Content="Số lượng mượn:"
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_SoLuongDaMuon"
+                                x:Name="lb_SoLuongMuonSachChon"
                                 Width="30"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
-                        <Label
-                            Width="100"
-                            Margin="0,5,0,0"
-                            HorizontalAlignment="Left"
-                            Content="Mô tả:"
-                            FontWeight="Bold"
-                            Foreground="Red" />
-                        <Label
-                            x:Name="lb_KQTK_MoTa"
-                            Content=""
-                            FontWeight="Bold" />
-                        <Label
-                            Width="100"
-                            Margin="0,5,0,0"
-                            HorizontalAlignment="Left"
-                            Content="Tên tác giả:"
-                            FontWeight="Bold"
-                            Foreground="Red" />
-                        <Label
-                            x:Name="lb_KQTK_TenTacGia"
-                            Content=""
-                            FontWeight="Bold" />
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label
+                                Width="60"
+                                HorizontalAlignment="Left"
+                                Content="Mô tả:"
+                                FontWeight="Bold"
+                                Foreground="Red" />
+                            <TextBlock
+                                x:Name="tb_MoTaSachChon"
+                                Width="298"
+                                Margin="0,5,0,0"
+                                FontWeight="Bold"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label
+                                Width="60"
+                                HorizontalAlignment="Left"
+                                Content="Tác giả:"
+                                FontWeight="Bold"
+                                Foreground="Red" />
+                            <TextBlock
+                                x:Name="tb_TacGiaSachChon"
+                                Width="298"
+                                Margin="0,5,0,0"
+                                FontWeight="Bold"
+                                TextWrapping="Wrap" />
+                        </StackPanel>
                         <StackPanel
                             Height="25"
                             Margin="0,5,0,0"
@@ -169,21 +177,22 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_NamXuatBan"
+                                x:Name="lb_NamXuatBanSachChon"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
-                        <Label
-                            Width="100"
-                            Margin="0,5,0,0"
-                            HorizontalAlignment="Left"
-                            Content="Nhà xuất bản:"
-                            FontWeight="Bold"
-                            Foreground="Red" />
-                        <Label
-                            x:Name="lb_KQTK_NhaXuatBan"
-                            Content=""
-                            FontWeight="Bold" />
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label
+                                Width="100"
+                                HorizontalAlignment="Left"
+                                Content="Nhà xuất bản:"
+                                FontWeight="Bold"
+                                Foreground="Red" />
+                            <Label
+                                x:Name="lb_NhaXuatBanSachChon"
+                                Content=""
+                                FontWeight="Bold" />
+                        </StackPanel>
                         <StackPanel
                             Height="25"
                             Margin="0,5,0,0"
@@ -194,7 +203,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_LoaiSach"
+                                x:Name="lb_LoaiSachChon"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -208,7 +217,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_NganhSach"
+                                x:Name="lb_NganhSachChon"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -229,6 +238,7 @@
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                SelectedCellsChanged="dataGridSach_SelectedCellsChanged"
                 SelectionMode="Single">
                 <DataGrid.Columns>
                     <DataGridTextColumn
