--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSLoaiSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSLoaiSach.xaml
@@ -6,10 +6,7 @@
     xmlns:local="clr-namespace:DACK_PTTKPM"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LoaiSach"
-    d:DesignHeight="300"
-    d:DesignWidth="600"
-    Loaded="Page_Loaded"
-    mc:Ignorable="d">
+    Loaded="Page_Loaded">
 
     <Grid>
         <Grid.Background>
@@ -45,23 +42,32 @@
                 BorderBrush="#B9C9DA"
                 BorderThickness="0,2,2,0">
                 <StackPanel Margin="20,10,20,10" Orientation="Vertical">
-                    <Label Content="Tìm kiếm theo mã loại" FontWeight="Bold" />
+                    <RadioButton
+                        x:Name="rd_TimKiemLoaiSachTheoMa"
+                        Content="Tìm kiếm theo mã loại sách"
+                        FontWeight="Bold"
+                        GroupName="rdGroup_TimKiemLoaiSach"
+                        IsChecked="true" />
                     <TextBox
-                        x:Name="tb_TimKiemMaLoaiSach"
+                        x:Name="tb_TimKiemTheoMaLoaiSach"
                         Margin="20,5,0,0"
-                        Text="Nhập mã tìm kiếm" />
-                    <Label
+                        KeyDown="tb_TimKiemTheoMaLoaiSach_KeyDown" />
+                    <RadioButton
+                        x:Name="rd_TimKiemLoaiSachTheoTen"
                         Margin="0,15,0,0"
-                        Content="Tìm kiếm theo tên loại"
-                        FontWeight="bold" />
+                        Content="Tìm kiếm theo tên loại sách"
+                        FontWeight="bold"
+                        GroupName="rdGroup_TimKiemLoaiSach" />
                     <TextBox
-                        x:Name="tb_TimKiemTenLoaiSach"
+                        x:Name="tb_TimKiemTheoTenLoaiSach"
                         Margin="20,5,0,0"
-                        Text="Nhập tên loại sách tìm kiếm" />
+                        KeyDown="tb_TimKiemTheoTenLoaiSach_KeyDown" />
                     <Button
                         x:Name="btn_TimKiemLoaiSach"
+                        Width="100"
                         Height="25"
-                        Margin="40,10,40,0"
+                        Margin="8"
+                        Click="btn_TimKiemLoaiSach_Click"
                         Content="Tìm kiếm" />
                 </StackPanel>
             </Border>
@@ -76,14 +82,17 @@
                         FontSize="14"
                         FontWeight="Bold"
                         Foreground="Red" />
-                    <StackPanel Height="25" Orientation="Horizontal">
+                    <StackPanel
+                        Height="25"
+                        Margin="0,5,0,0"
+                        Orientation="Horizontal">
                         <Label
                             Width="100"
                             Content="Mã loại sách:"
                             FontWeight="Bold"
                             Foreground="Red" />
                         <Label
-                            x:Name="lb_KQTK_MaLoaiSach"
+                            x:Name="lb_MaLoaiSachChon"
                             Content=""
                             FontWeight="Bold" />
                     </StackPanel>
@@ -97,7 +106,7 @@
                             FontWeight="Bold"
                             Foreground="Red" />
                         <Label
-                            x:Name="lb_KQTK_TenLoaiSach"
+                            x:Name="lb_TenLoaiSachChon"
                             Content=""
                             FontWeight="Bold" />
                     </StackPanel>
@@ -112,7 +121,8 @@
             <DataGrid
                 x:Name="dataGridLoaiSach"
                 AutoGenerateColumns="False"
-                IsReadOnly="True">
+                IsReadOnly="True"
+                SelectionChanged="dataGridLoaiSach_SelectionChanged">
                 <DataGrid.Columns>
                     <DataGridTextColumn
                         Width="150"
