--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowThemPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowThemPhieuMuon.xaml
@@ -1,18 +1,176 @@
-﻿<Window x:Class="DACK_PTTKPM.WindowThemPhieuMuon"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DACK_PTTKPM"
-        mc:Ignorable="d"
-        Title="Thêm phiếu mượn sách mới" Height="300" Width="600">
-    <Grid>
+﻿<Window
+    x:Class="DACK_PTTKPM.WindowThemPhieuMuon"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:UC="clr-namespace:DACK_PTTKPM.UC"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Thêm phiếu mượn sách mới"
+    Width="600"
+    Height="506"
+    Loaded="Window_Loaded"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
+    <Grid Margin="0,0,0,0">
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFECF2F9" Offset="0"/>
-                <GradientStop Color="White" Offset="1"/>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0" Color="#FFECF2F9" />
+                <GradientStop Offset="1" Color="White" />
             </LinearGradientBrush>
         </Grid.Background>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="60" />
+        </Grid.RowDefinitions>
+
+        <Label
+            HorizontalAlignment="center"
+            Content="Thêm phiếu mượn sách mới"
+            FontSize="20"
+            FontWeight="bold"
+            Foreground="Red" />
+        <Border
+            Grid.Row="1"
+            Padding="20,0,20,0"
+            BorderBrush="#B9C9DA"
+            BorderThickness="0,2,0,2">
+            <StackPanel VerticalAlignment="Top" Orientation="Vertical">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="220" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0" Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="90"
+                                VerticalAlignment="Bottom"
+                                Content="Mã độc giả"
+                                FontWeight="Bold" />
+                            <TextBox
+                                x:Name="tb_MaDocGia"
+                                Width="80"
+                                Height="22"
+                                Margin="4,0,0,0"
+                                KeyDown="tb_MaDocGia_KeyDown" />
+                            <Label
+                                x:Name="lb_Loi_DocGia"
+                                Margin="4,4,0,0"
+                                Content="Không tìm thấy độc giả"
+                                FontStyle="Italic"
+                                Foreground="Red"
+                                Visibility="Hidden" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="90"
+                                Content="Họ tên"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_HoTenDocGia" Content="" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="90"
+                                Content="Ngày sinh"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_NgaySinh" Content="" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="90"
+                                Content="Giới tính"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_GioiTinh" Content="" />
+                        </StackPanel>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="80"
+                                Content="Ngày mượn"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_NgayMuon" Content="" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="80"
+                                Content="Ngày trả"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_NgayTra" Content="" />
+                        </StackPanel>
+                        <Separator />
+                        <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
+                            <Label Content="Người lập phiếu" FontWeight="Bold" />
+                            <Label x:Name="lb_TenNguoiLapPhieu" Content="" />
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+                <Separator Margin="0,10,0,0" />
+                <Label
+                    Content="Danh sách sách mượn"
+                    FontSize="16"
+                    FontWeight="Bold" />
+                <Label
+                    x:Name="lb_ThongBaoLoiThemSach"
+                    FontSize="10"
+                    FontStyle="Italic"
+                    FontWeight="Bold"
+                    Foreground="Red" />
+                <StackPanel>
+                    <DataGrid
+                        x:Name="datagrid_ChiTietPhieuMuon"
+                        Height="200"
+                        AutoGenerateColumns="False"
+                        CanUserAddRows="True"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto"
+                        SelectionMode="Single">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn
+                                Width="80"
+                                Binding="{Binding Sach.pid}"
+                                Header="Mã sách" />
+                            <DataGridTextColumn
+                                Width="200"
+                                Binding="{Binding Sach.Ten}"
+                                Header="Tên sách"
+                                IsReadOnly="True" />
+                            <DataGridTextColumn Width="80" Header="Số lượng" />
+                            <DataGridTemplateColumn Width="*" Header="Ảnh bìa">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image
+                                            Width="60"
+                                            Margin="6"
+                                            HorizontalAlignment="Center"
+                                            Source="{Binding Sach.DuongDanAnh}" />
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </StackPanel>
+            </StackPanel>
+        </Border>
+        <StackPanel
+            Grid.Row="2"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                x:Name="btn_XacNhan"
+                Width="100"
+                Height="30"
+                Content="Xác nhận" />
+            <Button
+                x:Name="btn_HuyBo"
+                Width="100"
+                Height="30"
+                Margin="10,0,20,0"
+                Content="Hủy bỏ" />
+        </StackPanel>
     </Grid>
 </Window>
