--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowThemPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowThemPhieuMuon.xaml
@@ -2,17 +2,22 @@
     x:Class="DACK_PTTKPM.WindowThemPhieuMuon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:CV="clr-namespace:DACK_PTTKPM.CV"
     xmlns:UC="clr-namespace:DACK_PTTKPM.UC"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:DACK_PTTKPM"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Thêm phiếu mượn sách mới"
-    Width="600"
+    Width="713"
     Height="506"
     Loaded="Window_Loaded"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+    <Window.Resources>
+        <CV:SoSanhVoiMotSoConverter x:Key="SoSanhVoiMotSoConverter" />
+        <CV:SoSanhHaiSoConverter x:Key="SoSanhHaiSoConverter" />
+    </Window.Resources>
     <Grid Margin="0,0,0,0">
         <Grid.Background>
             <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -139,8 +144,11 @@
                                 Binding="{Binding Sach.Ten}"
                                 Header="Tên sách"
                                 IsReadOnly="True" />
-                            <DataGridTextColumn Width="80" Header="Số lượng" />
-                            <DataGridTemplateColumn Width="*" Header="Ảnh bìa">
+                            <local:DataGridNumericColumn
+                                Width="80"
+                                Binding="{Binding SoLuong}"
+                                Header="Số lượng" />
+                            <DataGridTemplateColumn Width="80" Header="Ảnh bìa">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Image
@@ -148,6 +156,33 @@
                                             Margin="6"
                                             HorizontalAlignment="Center"
                                             Source="{Binding Sach.DuongDanAnh}" />
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Width="*" Header="Thông tin">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Label x:Name="lb_Status" Content="OK" />
+                                        <DataTemplate.Triggers>
+                                            <DataTrigger Binding="{Binding Path=SoLuong, Converter={StaticResource ResourceKey=SoSanhVoiMotSoConverter}, ConverterParameter=0}" Value="0">
+                                                <Setter TargetName="lb_Status" Property="Content" Value="Số lượng sách mượn phải lớn hơn 0" />
+                                                <Setter TargetName="lb_Status" Property="Foreground" Value="Red" />
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path=SoLuong, Converter={StaticResource ResourceKey=SoSanhVoiMotSoConverter}, ConverterParameter=0}" Value="-1">
+                                                <Setter TargetName="lb_Status" Property="Content" Value="Số lượng sách mượn phải lớn hơn 0" />
+                                                <Setter TargetName="lb_Status" Property="Foreground" Value="Red" />
+                                            </DataTrigger>
+                                            <DataTrigger Value="1">
+                                                <DataTrigger.Binding>
+                                                    <MultiBinding Converter="{StaticResource ResourceKey=SoSanhHaiSoConverter}">
+                                                        <Binding FallbackValue="0" Path="SoLuong" />
+                                                        <Binding FallbackValue="0" Path="Sach.SoLuongHienCo" />
+                                                    </MultiBinding>
+                                                </DataTrigger.Binding>
+                                                <Setter TargetName="lb_Status" Property="Content" Value="Không đủ sách để mượn" />
+                                                <Setter TargetName="lb_Status" Property="Foreground" Value="Red" />
+                                            </DataTrigger>
+                                        </DataTemplate.Triggers>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
